--- a/cp/notes.tex
+++ b/cp/notes.tex
@@ -375,6 +375,10 @@ The binary search algorithm is:
     }
     return lb+1;
 \end{lstlisting}
+\subsection{Buckets}
+Splitting a linear range up into buckets of size $\sqrt{n}$, and maintaining
+necessary values (min, max, etc.) can help reduce time complexites from O(n)
+to O($\sqrt{n}$).
 \subsection{Array Scan}
 The name is given to the family of algorithms where we do a couple of runs of a given array to evaluate an attribute. Approaches involving subarrays can be dealt with using to two indices \texttt{s} and \texttt{e}. Things to note:
 \begin{itemize}
