I have sqaundered my resistance for a pocket full of mumbles.

--- a/cp/notes.tex
+++ b/cp/notes.tex
@@ -446,4 +446,12 @@ current value in a sequence can be solved better by ignoring any values that are
 surrounded by higher values; remove any element if it is smaller than its previous
 element.\\
 TODO: get infographic?
+\subsection{Linked Lists}
+The following tasks can be done in O(1) space with singly linked lists:
+\begin{enumerate}
+    \item Finding a[n/2 - 1].
+    \item Finding its length.
+    \item Reversing the list.
+    \item Hare and Turtle ??? TODO
+\end{enumerate}
 \end{document}
