kruskal, prim, uf

--- a/cp/ppg/parts/aptitude.tex
+++ b/cp/ppg/parts/aptitude.tex
@@ -1,5 +1,4 @@
-\section{Aptitude Test Pointers}
-\subsection{Number Sequence}
+\section{Number Sequence}
 These questions are hella annoying. So, I've written down a list of possibilities 
 here that I can refer to while cheating in the test. (That's a joke.)
 \begin{enumerate}
