--- a/cp/ppg/ppg.tex
+++ b/cp/ppg/ppg.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass{report}
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath,amsthm,amsfonts,amssymb,amscd}
 \usepackage[a4paper,hmargin=0.8in,bottom=1.3in]{geometry}
@@ -40,9 +40,9 @@
 \maketitle
 \tableofcontents
 \pagebreak
-\section{Week 1}
-\subsection{Searching Algorithms}
-\subsubsection*{Notes from \href{https://www.geeksforgeeks.org/searching-algorithms/}{GFG}}
+\chapter{Week 1}
+\section{Searching Algorithms}
+\subsection*{Notes from \href{https://www.geeksforgeeks.org/searching-algorithms/}{GFG}}
 These are algorithms to check for the existence of an element or to retrieve it from
 a data structure. The retrieval can also involve only returning the position (index)
 or a pointer to the element. There are two types:
@@ -116,7 +116,7 @@ Some search algorithms are discussed below:
     {O(log(n))}
     {O(1)}
 \end{enumerate}
-\subsubsection*{Misc}
+\subsection*{Misc}
 \begin{itemize}
     \item The preferred formula for evaluating the middle point of
     the interval in binary search is
@@ -138,12 +138,12 @@ Some search algorithms are discussed below:
     here we resort to replacing either one of \texttt{r = m - 1} or \texttt{l = m + 1} by \texttt{ = m}
     and change the loop invariant \texttt{l <= r} to \texttt{l < r}. 
 \end{itemize}
-\subsection{Sorting Algorithms}
+\section{Sorting Algorithms}
 These algorithms rearrange a given array in ascending order.
 Various other orders can be achieved by modifying the comparison operator.
 A sorting algorithm is \textbf{stable} if it preserves the relative
 order of equal elements.
-\subsubsection*{Merge Sort}
+\subsection*{Merge Sort}
 The first part of the algorithm recursively handles halves of the given array.
 The second part merges the halves sorted by the first part.
 It takes O(nlog(n)) time in the \textbf{all cases}. O(n) space is necessary
@@ -151,16 +151,16 @@ for the merging side of affairs. Implemented recursively. It's advantages
 include stability, parallelizability and lower time complexity. It's disadvantages
 include higher space complexity and not being in-place, and that it's not
 always optimal for small datasets. 
-\subsubsection*{Quick Sort}
+\subsection*{Quick Sort}
 It involves recursively picking an element (\textbf{the pivot})
 from the unsorted array, 
 placing it so that all elements less than it are before and all
 those greater than it are after. Then calling this function on the sub-arrays
 after and before the chosen element.
 //TODO pseudo code
-\subsubsection*{Quick Sort}
+\subsection*{Quick Sort}
 TODO pseudo code
-\subsubsection*{The Others}
+\subsection*{The Others}
 \begin{enumerate}
     \item \algodis{Selection Sort}
     {The given array is viewed in two parts; sorted and unsorted.
@@ -186,11 +186,11 @@ TODO pseudo code
     % \item \algodis{Radix/Counting Sort}
     % {}{}{}
 \end{enumerate}
-\section{Week 2}
+\chapter{Week 2}
 TODO move notes over from the other notebook.
-\section{Week 3}
-\subsection{Complete Search}
-\subsubsection*{Subset Processing}
+\chapter{Week 3}
+\section{Complete Search}
+\subsection*{Subset Processing}
 We use the function below with 0. (n = size of given set.)
 \begin{lstlisting}[language=C++,caption=Subset Generation]
 void search(int k) {
@@ -217,10 +217,10 @@ for (int b = 0; b < (1<<n); b++) {
     }
 }
 \end{lstlisting}
-\subsubsection*{Permutation Generation}
+\subsection*{Permutation Generation}
 TODO: write up permutation ideas.
 TODO: selection of subsets satisfying a property.
-\subsubsection*{Backtracking En General}
+\subsection*{Backtracking En General}
 If the dimensions of inputs are smaller than usual, backtracking is an option.
 As with other algorithms, you want to maximize this as much as possible. Optimizations
 are possible by:
@@ -270,15 +270,15 @@ The abstract code for backtracking looks like ths:
 reducing the time spent in fruitless paths. Additionally, we can leverage symmetries
 of the search space to check only a fraction of the entire possible solution set. Clearly,
 optimizations at the start of the search tree save a lot more time than those at the end.
-\subsubsection*{Meet in the Middle}
+\subsection*{Meet in the Middle}
 Another name for \textbf{Divide and Conquer}. It refers to splitting the search space up
 into two halves and combining the results of the two halves. It works if there is an
 efficient way to combine the results. Even 1 level of splitting (and extracting solutions
 from the halves using brute force) can have worthwhile optimizations: O($2^n$) $\implies$ O($2^{n/2}$).
 
-\section{Week 4}
-\subsection{Greedy Algorithms}
-\subsubsection*{\href{https://leetcode.com/discuss/general-discussion/1061059/ABCs-of-Greedy}{Reading Notes}}
+\chapter{Week 4}
+\section{Greedy Algorithms}
+\subsection*{\href{https://leetcode.com/discuss/general-discussion/1061059/ABCs-of-Greedy}{Reading Notes}}
 Greedy Solutions focus on looking at the problem in smaller steps, and at each step
 we select the option that offers the most obvious and immediate benefit. It's sort
 of like assuming there's only one maximum point in the search space, and hence,
@@ -290,6 +290,114 @@ algorithms are:
     \item Prim's minimum spanning tree.
     \item Huffman encoding.
 \end{itemize}
-
+With greedy algorithms, we often have to repeatedly pick
+the minimal element from a collection; hence using a \texttt{priority\_queue}
+or a \texttt{multiset} is often helpful.
+\subsection{Union Find}
+The data structure can also show up in greedy algorithms.
+Given below is the most optimized implementation of \texttt{find} and \texttt{combine}.
+\begin{lstlisting}[language=C++]
+vector<T> items;//given vector of items.
+vector<int> root;//representative roots of trees array.
+vector<int> rank;//for combine optimization.
+int find(int u){
+    if(root[u]==u){return u;}
+    //instead of return find(root[u]), do:
+    root[u] = find(root[u]);//path compression
+    return root[u];
+}
+void combine(int u, int v){
+    int ru, rv;
+    ru = find(u);rv = find(v);
+    if(ru!=rv){
+        //u, v in different trees.
+        if(rank[ru] < rank[rv]){
+            root[ru] = rv;
+            rank[rv] += rank[ru];
+            //combined tree has least possible height.
+        }
+        else{
+            root[rv] = ru;
+            rank[ru] += rank[rv];
+        }
+    }
+}
+\end{lstlisting}
+\subsubsection*{Variations of \texttt{root} array}
+The usual union-find implementation's root elements satisfy 
+\texttt{root[r] == r}. However, we can also use negative numbers
+at \texttt{root[r]} (which can't be the index of any parent),
+and check for \texttt{root[r] < 0} when searching for the root. Such
+a setup allows for recording information in the domain of negative
+numbers at the root, say, the size of the tree, but negated. The
+combine function then simply sets the combined tree's
+root value to the confluence of values at \texttt{rv} and
+\texttt{ru}.
+\subsubsection*{Kruskal's MST Algorithm}
+\begin{enumerate}
+    \item Have a min-heap of all edges.
+    \item Iterate through the heap, merging the trees of the vertices
+    of each edge. For each non-trivial merge, update a counter. Additionally, add the edge to the list of edges for the MST or
+    its weight to the weight of the MST.
+    \item Once the merge counter is at $|V|$ - 1, break.
+\end{enumerate}
+\subsubsection*{Prim's MST Algorithm}
+\begin{enumerate}
+    \item Pick a starting vertex. Initialize an empty min-heap of edges. Maintain a count of visited vertices.
+    \item Mark current vertex as visited.
+    \item Add all edges going out of the current vertex to the heap.
+    \item Iterate through the heap until an edge to an unvisited point is found.
+    \item Set this point as the current point. Iterate until count of visited vertices = $|V|$.
+\end{enumerate}
+\subsubsection*{Dijkstra's Shortest Path}
+\begin{enumerate}
+    \item Pick a starting vertex. Maintain an array of minimum distances to reach any vertex from a visited vertex. For visited vertices, this should be -1.
+    \item Update distances of array elements as min(old distance, distance from current point which is INT\_MAX if they are not neighbours). While iterating, record the array element with minimum distance to it. 
+    \item Set the recorded element as the current vertex and continue until the current vertex is the target vertex.
+\end{enumerate}
+Modifications can be made to record the predecessors in the paths
+or calculate the weights of the paths.
+\begin{lstlisting}[caption=Shortest Path]
+int distance(vector<int> &pi, vector<int> &pj);
+int dijkstras(vector<vector<int>>& ps, int s, int target) {
+    int n = ps.size(), res = 0, i = s;
+    vector<int> min_d(n, INT_MAX);
+    while (i != target) {
+        min_d[i] = -1;
+        int min_j = i;
+        for (int j = 0; j < n; ++j){
+            if (min_d[j] != -1) {//visited vertices.
+                min_d[j] = min(min_d[j],distance(ps[i],ps[j]));
+                min_j = min_d[j] < min_d[min_j] ? j : min_j;
+            }
+        }
+        res += min_d[min_j];
+        i = min_j;
+    }
+    return res;
+}
+\end{lstlisting}
+\begin{lstlisting}[caption=Dijkstra's MST]
+int distance(vector<int> &pi, vector<int> &pj);
+int dijkstras(vector<vector<int>>& ps, int s, int target) {
+    int n = ps.size(), res = 0, i = s,connected = 0;
+    vector<int> min_d(n, INT_MAX);
+    while (connected < n) {
+        min_d[i] = -1;
+        connected++;
+        int min_j = i;
+        for (int j = 0; j < n; ++j){
+            if (min_d[j] != -1) {//visited vertices.
+                min_d[j] = min(min_d[j],distance(ps[i],ps[j]));
+                min_j = min_d[j] < min_d[min_j] ? j : min_j;
+            }
+        }
+        res += min_d[min_j];
+        i = min_j;
+    }
+    return res;
+}
+\end{lstlisting}
+\chapter{Aptitude Test Pointers}
 \input{parts/aptitude}
 \end{document} 
