--- a/cp/notes.tex
+++ b/cp/notes.tex
@@ -482,4 +482,13 @@ The following tasks can be done in O(1) space with singly linked lists:
     \item Reversing the list.
     \item Hare and Turtle ??? TODO
 \end{enumerate}
+\section*{Misc. Notes}
+\subsection*{Precision printing}
+\begin{lstlisting}
+cout.setf(ios_base::fixed,ios_base::floatfield);
+cout.precision(<d>);//to print d digits after dp.
+cout<<a;
+//or
+printf("%.<d>f",a);
+\end{lstlisting}
 \end{document}
